--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,117 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.centered-content {
+    max-width: 1400px;
+    margin: 0 auto;
+    background: rgba(179, 0, 255, 0.04);
+}
+
+.border {
+    border: 1px solid red;
+}
+
+/****************************************/
+
+.app {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.app-content {
+    flex-grow: 1;
+}
+
+header {
+}
+
+.header-content {
+    border: 1px solid red;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px;
+}
+
+.logo svg {
+}
+
+.welcome {
+    border: 1px solid red;
+    width: 100%;
+}
+
+.welcome p {
+    max-width: 1000px;
+    color: #174cb4;
+    font-size: 50px;
+    font-family: monospace;
+    font-weight: bold;
+    margin: 0;
+}
+
+.latest-apps {
+    padding-top: 100px;
+    border: 1px solid red;
+    width: 100%;
+}
+
+
+/******************************/
+footer {
+    background: #f1f4f7;
+}
+
+.footer-links-container {
+    border: 1px solid red;
+    display: flex;
+    column-gap: 124px;
+    padding: 24px;
+}
+
+.footer-links {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-links h4 {
+    margin-top: 0;
+    color: #5b5b5b;
+}
+
+.footer-links a {
+    font-size: 12px;
+    text-decoration: none;
+    color: #5b5b5b;
+    margin-bottom: 12px;
+}
+
+.footer-links a:hover {
+    opacity: 0.8;
+}
+
+.footer-copy-right {
+    font-size: 12px;
+    background: #fff;
+    padding: 12px;
 }
