--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,9 @@ code {
 }
 
 .centered-content {
-    max-width: 1400px;
+    max-width: 1200px;
     margin: 0 auto;
-    background: rgba(179, 0, 255, 0.04);
+    /*background: rgba(179, 0, 255, 0.04);*/
 }
 
 .border {
@@ -45,7 +45,6 @@ header {
 }
 
 .header-content {
-    border: 1px solid red;
     height: 100px;
     display: flex;
     align-items: center;
@@ -57,23 +56,47 @@ header {
 }
 
 .welcome {
-    border: 1px solid red;
+    padding: 220px 0;
     width: 100%;
+    background: #174cb4;
+    position: relative;
+    overflow: hidden;
+}
+
+.welcome:after {
+    position: absolute;
+    left: -12px;
+    bottom: -132px;
+    height: 162px;
+    width: 110vw;
+    background: white;
+    /*border: 2px deepskyblue solid;*/
+    transform: rotate(-6deg);
+    content: '';
 }
 
 .welcome p {
     max-width: 1000px;
-    color: #174cb4;
+    color: white;
     font-size: 50px;
     font-family: monospace;
     font-weight: bold;
     margin: 0;
 }
 
+.services {
+    padding: 120px 0;
+}
+
 .latest-apps {
     padding-top: 100px;
-    border: 1px solid red;
     width: 100%;
+}
+
+.retro {
+    padding: 120px 0;
+    border: 1px solid red;
+
 }
 
 
@@ -83,7 +106,6 @@ footer {
 }
 
 .footer-links-container {
-    border: 1px solid red;
     display: flex;
     column-gap: 124px;
     padding: 24px;
