--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,14 @@ code {
     position: relative;
 }
 
+.jumbotron {
+    background: #f5f5f7;
+}
+
+.order2 {
+    order: 2;
+}
+
 /****************************************/
 
 .app {
@@ -166,12 +174,44 @@ header {
     width: 100%;
 }
 
-.retro {
-    padding: 120px 0;
-    border: 1px solid red;
-
+/**/
+/**/
+/* APPS PREVIEW*/
+.app-preview {
+    display: flex;
 }
 
+/**/
+.app-description {
+    border-bottom: 4px solid #6e6e73;
+    min-height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.app-description p {
+    max-width: 500px;
+    color: #6e6e73;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+.app-screenshots {
+    /*border: 1px solid tomato;*/
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.app-screenshots img {
+    max-height: 500px;
+    min-height: 400px;
+    margin: 24px 0;
+}
 
 /******************************/
 footer {
