--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #1D1D1F;
+    font-size: 15px;
+}
+
+.app {
 }
 
 h1 {
@@ -87,21 +91,10 @@ code {
     flex-grow: 1;
 }
 
-header {
-}
-
-.header-content {
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 8px;
-}
-
 .logo svg {
 }
 
-.welcome {
+.welcome-section {
     padding: 50px 0;
     width: 100%;
     position: relative;
@@ -268,4 +261,25 @@ footer {
     font-size: 12px;
     background: #fff;
     padding: 24px 12px;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 4px;
+    height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background-color: #f2f2f2;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(6, 108, 224);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(107, 107, 107, 0.6);
 }
