--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -95,12 +95,16 @@ code {
 }
 
 .welcome-section {
+    height: 60vh;
+    border: 4px solid #000000;
+    border-radius: 24px;
     padding: 50px 0;
     width: 100%;
     position: relative;
     overflow: hidden;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .hello-text-wrapper {
@@ -146,7 +150,6 @@ code {
 
 #space-video {
     width: 100%;
-    background-image: url("./space1.png");
     background-position: center top;
 }
 
@@ -245,16 +248,15 @@ footer {
 
 .footer-links h4 {
     margin-top: 0;
-    margin-bottom: 12px;
+    margin-bottom: 4px;
 }
 
 .footer-links a {
+    /*border: 1px solid deepskyblue;*/
     font-size: 12px;
     text-decoration: none;
     color: #1D1D1F;
-    /*border: 1px solid deepskyblue;*/
-    padding: 4px 0;
-    margin-bottom: 4px;
+    padding: 8px 0;
 }
 
 .footer-links a:hover {
