--- a/public/splash.css
+++ b/public/splash.css
@@ -1,20 +1,9 @@
-main {
-    flex: 1 0 auto;
-}
-
-h1.title,
-.footer-copyright a {
-    font-family: 'Architects Daughter', cursive;
-    text-transform: uppercase;
-    font-weight: 900;
-}
-
+/* Background , body */
 /* start welcome animation */
 .welcome {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background: #fff;
     overflow: hidden;
     -webkit-font-smoothing: antialiased;
 }
@@ -22,7 +11,7 @@ h1.title,
 .welcome .splash {
     height: 0px;
     padding: 0px;
-    border: 130em solid #2671c9;
+    border: 130em solid #009dff;
     position: fixed;
     left: 50%;
     top: 100%;
@@ -96,9 +85,11 @@ h1.title,
         top: 50%;
     }
     50% {
+        height: 80px;
         top: 40%;
     }
     100% {
+        width: 56px;
         top: 100%;
     }
 }
@@ -113,24 +104,23 @@ h1.title,
     }
     100% {
         top: 50%;
-        background: #039be5;
+        background: #009dff;
     }
 }
 
 @keyframes materia {
     0% {
-        background: #039be5;
+        background: #f2f2f2;
     }
     50% {
-        background: #039be5;
+        background: #009dff;
         top: 26px;
     }
     100% {
-        background: #f2f2f2;
-        width: 100%;
-        height: 64px;
-        border-radius: 0px;
-        top: 26px;
+        background: #009dff;
+        border-radius: 0;
+        height: 100vh;
+        width: 100vw;
     }
 }
 
