--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,10 +1,13 @@
 header {
-    height: 54px;
+    height: 10vh;
     position: sticky;
     top: 0;
-    background: #ffffff;
-    transition: all .2s ease-in-out;
     z-index: 1;
+    transition: height .2s ease-in-out;
+}
+
+.normal-height {
+    height: 54px;
 }
 
 .go-top-button {
