--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-family: Roboto, SansSerif, Serif, serif;
+    margin: 0;
     color: #1D1D1F;
     font-size: 15px;
 }
@@ -91,101 +91,7 @@ code {
     flex-grow: 1;
 }
 
-.logo svg {
-}
-
-.welcome-section {
-    height: 60vh;
-    border: 4px solid #000000;
-    border-radius: 24px;
-    padding: 50px 0;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.hello-text-wrapper {
-    margin-bottom: 12px;
-}
-
-.hello-text {
-    font-size: 48px;
-    font-family: monospace;
-}
-
-.welcome-apps-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 12px;
-    background: #000;
-    padding: 12px;
-}
-
-.welcome-apps-list h2 {
-    color: #fff;
-    font-size: 24px;
-}
-
-.item {
-    border-radius: 12px;
-}
-
-.item p {
-    border: 1px dashed #fff;
-    border-radius: 4px;
-    color: #fff;
-    padding: 0 24px;
-    font-size: 24px;
-    font-family: monospace;
-}
-
-.space-video-container {
-    max-height: 200px;
-    overflow: hidden;
-}
-
-#space-video {
-    width: 100%;
-    background-position: center top;
-}
-
 /* SERVICES */
-.services {
-    padding: 120px 0;
-}
-
-.services-title {
-    display: flex;
-    justify-content: center;
-    padding: 24px;
-}
-
-.services-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 24px;
-}
-
-.service {
-    background-color: #f5f5f7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 7px;
-    padding: 4px;
-    width: 140px;
-    height: 140px;
-}
-
-.latest-apps {
-    padding-top: 100px;
-    width: 100%;
-}
 
 /**/
 /**/
