--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,7 +3,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 1;
-    transition: height .2s ease-in-out;
+    transition: height 200ms ease-in-out;
 }
 
 .normal-height {
@@ -26,7 +26,7 @@ header {
 }
 
 .shadow-header {
-    box-shadow: 0 4px 12px -10px #bfbfbf;
+    box-shadow: 0 4px 12px -8px #ccc;
 }
 
 .header-content {
